<resources>
    <string name="app_name">Eletric Cars</string>
    <string name="subtitle_all_cars">All Cars</string>
    <string name="subtitle_fav">Favorites</string>
    <string name="field_price">Price:</string>
    <string name="field_battery">Battery:</string>
    <string name="field_power">Power:</string>
    <string name="field_price_val">$ 50.0000,00</string>
    <string name="field_battery_val">93.4 kWh</string>
    <string name="field_power_val">646 cv</string>
    <string name="field_charge">Charge:</string>
    <string name="field_charge_val">25min</string>
    <string name="filed_inp_price_per_km">Price per km</string>
    <string name="filed_inp_km_traveled">Km traveled</string>
    <string name="button_calculate">Calculate</string>
    <string name="field_result_of_calculation">Result of calculation:</string>
    <string name="field_go_back_home">GO BACK HOME</string>
    <string name="field_go_to_calculate_function">GO TO CALCULATE FUNCTION</string>
    <string name="field_calculate_autonomy">Calculate Autonomy</string>
    <string name="desc_fab_gotocalc_button">Function that computes autonomy</string>
    <string name="desc_iv01">An eletric car</string>
    <string name="tab_cars_description">The cars tab in the maind screen</string>
    <string name="response_error">Something wrong with connection. Try again later.</string>
    <string name="no_connectivity">There\'s no connectivity.</string>
    <string name="saved_calc">saved_calc</string>
    <string name="favorited_car">Car successfully favorited on local storage!</string>
    <string name="unfavorited_car">Car unfavorited on local storage!</string>
</resources>