<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/iv_left_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_calculate_autonomy"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginBottom="680dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@id/iv_left_arrow"
        app:layout_constraintTop_toTopOf="@id/iv_left_arrow"
        />


    <EditText
        android:id="@+id/et_price_km"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filed_inp_price_per_km"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:maxLines="2"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <EditText
        android:id="@+id/et_traveled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filed_inp_km_traveled"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:maxLines="2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_price_km"/>

    <Button
        android:id="@+id/bt_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_calculate"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_traveled"
        />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_result_of_calculation"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/bt_calc"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_result_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_result"
        app:layout_constraintStart_toEndOf="@id/tv_result"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>